[package]
name = "threadpool"
version = "0.1.0"
edition = "2021"
authors = ["Chetan <chetanbaliyan10@gmail.com>"]
description = "A thread pool implementation"
license = "MIT"
repository = "https://github.com/chetanXpro/threadpool"
keywords = ["threadpool", "concurrency", "threads", "parallel"]
categories = ["concurrency"]

[lib]
name = "threadpool"
path = "src/lib.rs"

[dependencies]
crossbeam = "0.8.4"
log = "0.4.25"
num_cpus = "1.16.0"
thiserror = "2.0.11"

